# qt-chat-desktop

./: .gitignore  CMakeLists.txt  gitee-push.bat  github-push.bat  leftpanel.cpp  leftpanel.h  main.cpp  mainwindow.cpp  mainwindow.h  rightpanel.cpp  rightpanel.h
